fix white flicker

--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 body {
   font-family: monospace;
   color: white;
+  background-color: black;
 }
 
 li {
